legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr72816.c-5.4.0-2.out.txt
pr72816.c:8:5: error: array size missing in ‘b’
   A b;
     ^
